test/error/LexLiteralDecOverflow2.fu
public static class Test
{
	public static bool Run()
	{
		long a = 9223372036854775808; //ERROR: Integer too big
		return true;
	}
}
